fix bug with z-index on mobile menu

--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -101,7 +101,7 @@ h1 {
   margin-bottom: 1.5rem;
 
   @include breakpoint-up(large) {
-    font-size: $font-xlg;
+    font-size: $font-lg;
   }
 }
 
