--- a/app/sass/_header.scss
+++ b/app/sass/_header.scss
@@ -41,13 +41,14 @@
   }
   &__toggle {
     //Mobile Menu
+
     > span {
       display: block;
       width: 26px;
       height: 2px;
       background-color: $darkBlue;
       transition: all 300ms ease-in-out;
-    transform-origin: 3px 1px;
+      transform-origin: 3px 1px;
 
       &:not(:last-child) {
         margin-bottom: 5px;
@@ -57,6 +58,7 @@
 
   &__menu {
     position: absolute;
+    z-index: 2;
     width: calc(100% - 3rem);
     left: 50%;
     transform: translateX(-50%);
