--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -8,7 +8,6 @@ $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
 //Font size
-$font-small: 0.875rem; //14px
-$font-med: 1.125rem; //18px
-$font-lg: 1.25rem; //18px
-$font-xlg: 3.25rem; //18px
+$font-small: 0.875rem;
+$font-med: 1.125rem;
+$font-lg: 1.25rem;
